# paperapi-rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/api/: ids.rs  mod.rs  test.rs
src/api/builder/: endpoints.rs  mod.rs
src/objects/: build.rs  error.rs  mod.rs  test.rs  version.rs
