[package]
name = "paper-api"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"

[dependencies.chrono]
version = "0.4.45"
default-features = false
features = ["alloc", "serde", "std"]

[dependencies.serde]
version = "1.0.228"
features = ["derive", "std"]

[dependencies.url]
version = "2.5.8"
default-features = false
features = ["std"]

[dev-dependencies]
serde_json = "1.0"
